--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "autoprefixer": "^10",
     "axios": "^1.3.4",
     "core-js": "^3.8.3",
+    "fs": "0.0.1-security",
     "moment": "^2.29.4",
+    "mysql2": "^3.2.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
